add metric and signout
