# docs/swagger.yaml
@@ -13,6 +13,11 @@ definitions:
       refreshToken:
         type: string
     type: object
+  domain.SignOutRequest:
+    properties:
+      refreshToken:
+        type: string
+    type: object
   domain.SignUpRequest:
     properties:
       email:
@@ -43,6 +48,10 @@ paths:
       responses:
         "200":
           description: Access token is valid
+          headers:
+            X-User-Id:
+              description: Authenticated user UUID
+              type: string
         "401":
           description: Unauthorized
         "405":
@@ -76,6 +85,30 @@ paths:
         "500":
           description: Internal server error
       summary: Sign in
+  /signout:
+    post:
+      consumes:
+      - application/json
+      description: Revoke refresh token
+      parameters:
+      - description: Sign out payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/domain.SignOutRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Signed out
+        "400":
+          description: Invalid request
+        "405":
+          description: Method not allowed
+        "500":
+          description: Internal server error
+      summary: Sign out
   /signup:
     post:
       consumes:
